syntax = "proto3";
package trade_log;
import "google/protobuf/empty.proto";

message QueryTradeLogGrpcRequest{
    optional string TraderId = 1;
    optional string AccountId = 2;
    optional string Component = 3;
    optional string ProcessId = 4;
    optional string OperationId = 5;
    optional uint64 DateFrom = 6;
    optional uint64 DateTo = 7;
}

message TradeLogGrpcModel{
    string TraderId = 1;
    string AccountId = 2;
    string Component = 3;
    optional string ProcessId = 4;
    optional string OperationId = 5;
    map<string, string> Data = 6;
    uint64 Date = 7;
}

service TradeLogGrpcService {
    rpc Query(trade_log.QueryTradeLogGrpcRequest) returns (stream TradeLogGrpcModel);
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
 }